syntax = "proto3";

package io.restorecommerce.credential;

import "io/restorecommerce/resource_base.proto";
import "io/restorecommerce/meta.proto";
import "google/protobuf/any.proto";
import "io/restorecommerce/auth.proto";
import "io/restorecommerce/status.proto";

/*
* Microservice definition.
*/
service CredentialService {
  rpc Read (io.restorecommerce.resourcebase.ReadRequest) returns (CredentialListResponse);
  rpc Create (CredentialList) returns (CredentialListResponse);
  rpc Delete (io.restorecommerce.resourcebase.DeleteRequest) returns (io.restorecommerce.resourcebase.DeleteResponse);
  rpc Update (CredentialList) returns (CredentialListResponse);
  rpc Upsert (CredentialList) returns (CredentialListResponse);
}

message Deleted {
  optional string id = 1;
}

message CredentialList {
  repeated Credential items = 1;
  optional uint32 total_count = 2;
  optional io.restorecommerce.auth.Subject subject = 3;
}

message CredentialListResponse {
  repeated CredentialResponse items = 1;
  optional uint32 total_count = 2;
  optional io.restorecommerce.status.OperationStatus operation_status = 3;
}

message CredentialResponse {
  optional Credential payload = 1;
  optional io.restorecommerce.status.Status status = 2;
}

message Credential {
  optional string id = 1;
  optional io.restorecommerce.meta.Meta meta = 2;
  optional string name = 3;
  optional string description = 4;
  optional string user = 5;
  optional string pass = 6;
  optional google.protobuf.Any credentials = 7; /// additional credentials as auth key or certificates etc
}